# ab

./: .appveyor.yml  .clang-format  .coveralls  .dir-locals.el  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.rst  Config.hpp.in  README  README.md  README.rst  Reader.hpp  conanfile.txt  platform.cmake
ab/: CMakeLists.txt  README.md  README.rst
ab/doc/: Ab.md  fork_heap_serialization.md
ab/include/: Ab.hpp
ab/include/Ab/: Config.hpp.in  Context.hpp  Error.hpp  ErrorCategory.hpp  Instruction.hpp  Interpreter.hpp  Interpreter.inl.hpp  Memory.hpp  Memory.inl.hpp  Module.hpp  Module.inl.hpp  ModuleLoader.hpp  Process.hpp  Process.inl.hpp  Version.hpp  VirtualMachineState.hpp  VirtualMachineState.inl.hpp  leb128.hpp
ab/src/: ErrorCategory.cpp  Memory.cpp  Process.cpp  Version.cpp  ab-main.cpp  ab.cpp  abc.cpp
ab/src/Wasm/: Loader.cpp  Reader.cpp
ab/test/: CMakeLists.txt  Test.hpp  TestInterpreter.cpp  TestMemory.cpp  TestProcess.cpp  TestReader.cpp  jitbuildertest.cpp
ab/test/Wasm/: CMakeLists.txt
commands/: CMakeLists.txt  README.rst
commands/include/Ab/: Commands.hpp
commands/src/: ab-commands-asm.cpp  ab-commands-disasm.cpp  ab-commands-help.cpp  ab-commands-run.cpp  ab-commands-version.cpp
core/: CMakeLists.txt  README.rst
core/include/: Core.hpp
core/include/Ab/: ByteBuffer.hpp  Context.hpp  Func.hpp  FuncBuilder.hpp.jinja  Instruction.hpp  Interpreter.hpp.jinja  InterpreterBuilder.hpp  Label.hpp  LinearMemory.hpp  Loading.hpp  Module.hpp  ModuleBuilder.hpp  ModuleConstants.hpp  ModuleLoader.hpp  ModulePrinting.hpp  ModuleReader.hpp  ModuleVisitation.hpp  ModuleWriter.hpp  Opcode.hpp.jinja  Resolver.hpp  Runtime.hpp  State.hpp  State.nasm  Store.hpp  Types.hpp  VirtualMachine.hpp  XDisasm.hpp.jinja  XExpr.hpp.jinja  XExprDisasm.hpp.jinja  XFunction.hpp  XFunctionBuilder.hpp.jinja  XModuleCache.hpp  XOpCode.hpp.jinja  leb128.hpp
core/include/Core/: Annotations.hpp  Atomic.hpp  Bytes.hpp  Debug.hpp  StaticInstance.hpp  Synchronic.hpp
core/include/core/: Access.hpp  Address.hpp  Dummy.hpp  InPlace.hpp  Internal.hpp  Latch.hpp  LockGuard.hpp  Maybe.hpp  MaybeStorage.hpp  Meta.hpp  MetaPolicy.hpp  Nothing.hpp  SafeDestructor.hpp  SharedLock.hpp
core/src/: SharedLock.cpp  ab-core-Entry.nasm  ab-core-Interpreter.cpp.jinja  ab-core-Loading.cpp  ab-core-Version.cpp  ab-core-VirtualMachine.cpp
core/src/Wasm/: ab-core-wasm-Loader.cpp  ab-core-wasm-Reader.cpp
core/test/: CMakeLists.txt  TestMaybe.cpp  TestReader.cpp  TestSharedLock.cpp  TestXFunctionBuilder.cpp  ab-core-test-func-builder.cpp  ab-core-test-interpreter.cpp  ab-core-test-linear-memory.cpp  ab-core-test-main.cpp  ab-core-test-process.cpp  ab-core-test-runtime-env.cpp  ab-test-InterpreterTest.cpp  ab-test-LinearMemoryTest.cpp  ab-test-ProcessTest.cpp  ab-test-linear-memory.cpp  ab-wasm-test-reader.cpp  jitbuildertest.cpp
core/test/Wasm/: CMakeLists.txt
edn/: CMakeLists.txt  README.rst
edn/src/: ab-edn-globals.cpp  ab-edn-lexer.cpp.rl  ab-edn-parser.cpp
edn/test/: CMakeLists.txt  ab-edn-test-ir.cpp  ab-edn-test-lexer.cpp  ab-edn-test-parser.cpp  ab-edn-test-token-tree.cpp
edn/test/input/: metadata.edn  this-is-a-test.edn  vectors.edn
om/: CMakeLists.txt  README.md  README.rst
om/doc/: Om.md
om/glue/: ArrayletObjectModel.hpp  CMakeLists.txt  CollectorLanguageInterfaceImpl.cpp  CollectorLanguageInterfaceImpl.hpp  CompactSchemeFixupObject.cpp  CompactSchemeFixupObject.hpp  ConfigurationDelegate.hpp  ContractslotScanner.hpp  EnvironmentDelegate.cpp  EnvironmentDelegate.hpp  FrequentObjectsStats.cpp  FrequentObjectsStats.hpp  GlobalCollectorDelegate.hpp  LanguageSegregatedAllocationCache.hpp  LanguageThreadLocalHeap.hpp  LanguageVMGlue.c  MarkingDelegate.cpp  MarkingDelegate.hpp  MixedObjectModel.hpp  MixedObjectScanner.hpp  ObjectAllocationModel.hpp  ObjectIterator.hpp  ObjectModel.hpp  ObjectModelDelegate.cpp  ObjectModelDelegate.hpp  ObjectScannerState.hpp  Profiling.c  ScavengerBackOutScanner.hpp  ScavengerRootScanner.hpp  StartupManagerImpl.cpp  StartupManagerImpl.hpp  UtilGlue.c  VerboseManagerImpl.cpp  VerboseManagerImpl.hpp  objectdescription.h  omrExampleVM.cpp  omrExampleVM.hpp  sizeclasses.h
om/include/: Om.hpp
om/include/Om/: ActiveContext.hpp  AllocationSite.hpp  Allocator.hpp  Allocator.inl.hpp  ArrayCell.hpp  BoxAllocator.hpp  BoxCell.hpp  BoxCell.inl.hpp  BoxRef.hpp  BoxRef.inl.hpp  Cell.hpp  Cell.inl.hpp  CellHeader.hpp  CellHeader.inl.hpp  CellKind.hpp  Config.hpp.in  Context.hpp  Context.inl.hpp  DataCell.hpp  DataCell.inl.hpp  Debug.hpp  Error.hpp  ErrorCategory.hpp  Finalizer.hpp  GcLock.hpp  GcSafe.hpp  Heap.hpp  Heap.inl.hpp  Id.hpp  Map.hpp  MarkContext.hpp  MarkingVisitor.hpp  Maybe.hpp.backup  Mm.hpp  NativeCell.hpp  NativeCell.inl.hpp  Object.hpp  ObjectHeader.hpp  OmrCompat.hpp  OmrThread.hpp  (+26 more)
om/src/: Context.cpp  ErrorCategory.cpp  Heap.cpp  Process.cpp  System.cpp  Version.cpp
om/test/: CMakeLists.txt  TestAllocator.cpp  TestCell.cpp  TestContext.cpp  TestRef.cpp  TestStackRoot.cpp  TestSystem.cpp  TestSystemLock.cpp  TestValue.cpp
pith/: CMakeLists.txt  README.md  README.rst
pith/include/: Pith.hpp
pith/include/Pith/: .#Atomic.hpp  Access.hpp  Address.hpp  Annotations.hpp  ArrayBox.hpp  Assert.hpp  Atomic.hpp  BitField.hpp  Box.hpp  Bytes.hpp  Fail.hpp  (+32 more)
pith/src/: Pith.cpp  Process.cpp  SexprPrinter.cpp  SharedLock.cpp  Version.cpp
pith/test/: CMakeLists.txt  TestArray.cpp  TestArrayBox.cpp  TestAssert.cpp  TestBox.cpp  TestConstant.cpp  TestLeb128.cpp  TestMaybe.cpp  TestPage.cpp  TestResult.cpp  TestSharedLock.cpp  TestSpan.cpp  TestStringSpan.cpp  TestVarInt.cpp
test/base/: CMakeLists.txt  README.rst
util/: CMakeLists.txt  README.rst
util/src/: ab-util-Process.cpp  ab-util-SharedLock.cpp
util/test/: CMakeLists.txt  TestArrayBox.cpp  TestAssert.cpp  TestBox.cpp  TestConstant.cpp  TestMaybe.cpp  TestPage.cpp  TestResult.cpp  TestSexpr.cpp  TestSharedLock.cpp  TestSpan.cpp  TestStringSpan.cpp  TestVarInt.cpp  TestVec.cpp
wast/: CMakeLists.txt
wast/src/: ab-wast-FunctionParser.cpp.rl.jinja  ab-wast-Lexer.cpp.rl
(+273 files in other folders)
